--- a/html/account_password.html
+++ b/html/account_password.html
@@ -3,23 +3,24 @@
 		<div class="card-content">
 			<h5 style="margin: 0 0">Update Password</h5>
 			 <div class="input-field"  style="max-width: 300px">
-	          <input id="old" type="password" class="">
+	          <input id="old" type="password" class="" v-model="pass.old">
 	          <label for="old">Old Password</label>
 	        </div>
 
 	         <div class="input-field"  style="max-width: 300px">
-	          <input id="new" type="password" class="">
+	          <input id="new" type="password" class="" v-model="pass.new">
 	          <label for="new">New Password</label>
 	        </div>
 
 	         <div class="input-field"  style="max-width: 300px">
-	          <input id="conf" type="password" class="">
+	          <input id="conf" type="password" class="" v-model="pass.conf">
 	          <label for="conf">Confirm</label>
 	        </div>
 
 	         <div class="right-align">
 	        	<router-link to="/account" class="btn waves-effect waves-light grey" style="margin:  2px">Back</router-link>
-	        	<button class="btn waves-effect waves-light " style="margin: 2px">Update</button>
+	        	<button  @click="update" :disabled="loading"
+	        	class="btn waves-effect waves-light " style="margin: 2px">Update</button>
 	        </div>
 		</div>
 	</div>
