--- a/html/list_page.html
+++ b/html/list_page.html
@@ -1,11 +1,16 @@
 <div class="center-align">
     <ul class="pagination" @click.prevent="">
-        <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+<!--         <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
         <li class="active"><a href="#!">1</a></li>
         <li class="waves-effect"><a href="#!">2</a></li>
         <li class="waves-effect"><a href="#!">3</a></li>
-        <li class="waves-effect"><a href="#!">4</a></li>
-        <li class="waves-effect"><a href="#!">5</a></li>
-        <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+        <li class="waves-effect"><a href="#!">4</a></li> -->
+        <li class="waves-effect" v-for="x in store.pages" key="x">
+            <a href="#/" @click="goTo(x)">{{x}}</a>
+        </li>
+        <li >
+            <a @click="more" 
+            href="#/" class="waves-effect active">more...</a>
+        </li>
     </ul>
 </div>
