--- a/html/list_view.html
+++ b/html/list_view.html
@@ -39,5 +39,6 @@
 
 <div class="right-align">
 	<button class="btn waves-effect waves-light grey accent-1 " style="margin: 5px 5px" @click="router.go(-1)">Back</button>
-	<router-link class="btn waves-effect waves-light " to="/list/edit/99" style="margin: 5px 5px">Edit</router-link>
+	<router-link v-if="account.logged"
+	 class="btn waves-effect waves-light " to="/list/edit/99" style="margin: 5px 5px">Edit</router-link>
 </div>
