i forgot to track the changes sorry

--- a/html/account_login.html
+++ b/html/account_login.html
@@ -2,14 +2,13 @@
 		<div class="card">
 			<div class="card-content">
 				<h5 style="margin: 0 0">Login</h5>
-				<div class="divider" style="margin: 5px 0"></div>
+				<div class="divider" style="margin: 5px 5px 25px 0"></div>
 				<div style="max-width: 300px;">
 					<div class="input-field ">
 						<i class="material-icons prefix">account_box</i>
 					  <input  id="user" type="email" v-model="account.email" 
 					  :class="invalid ? 'invalid': ''">
 					  <label for="user" >Email</label>
-
 					</div>
 
 			        <div class="input-field ">
@@ -18,7 +17,6 @@
 			          :class="invalid ? 'invalid': ''">
 			          <label for="pass">Password</label>
 			        </div>	
-
 			        
 				</div>
 				<div class="right-align">
