--- a/html/list_edit.html
+++ b/html/list_edit.html
@@ -2,5 +2,6 @@
 <list_form />
 <div class="right-align">
 	<button class="btn waves-effect waves-light grey accent-1 " style="margin: 5px 5px" @click="router.go(-1)">Back</button>
-	<router-link class="btn waves-effect waves-light " to="/list/edit/99" style="margin: 5px 5px">Edit</router-link>
+	<button @click="updatePerson"
+	class="btn waves-effect waves-light " style="margin: 5px 5px">Update</button>
 </div>
