--- a/html/home.html
+++ b/html/home.html
@@ -10,36 +10,81 @@
 					<tbody>
 						<tr>
 							<td>Male</td>
-							<th>99</th>
+							<th class="right-align">
+								<span v-if="summary.male">{{summary.male}}</span>
+								<div v-else>
+									<button @click="showInfo('male')"
+									class="btn-small btn-flat waves-effect waves-light">show</button>
+								</div>
+							</th>
 						</tr>
 						<tr>
 							<td>Female</td>
-							<th>99</th>
+							<th class="right-align">
+								<span v-if="summary.female">{{summary.female}}</span>
+								<div v-else>
+									<button @click="showInfo('female')"
+									class="btn-small btn-flat waves-effect waves-light">show</button>
+								</div>
+							</th>
 						</tr>
 						
 						<tr>
 							<td>Single</td>
-							<th>99</th>
+							<th class="right-align">
+								<span v-if="summary.single">{{summary.single}}</span>
+								<div v-else>
+									<button @click="showInfo('single')"
+									class="btn-small btn-flat waves-effect waves-light">show</button>
+								</div>
+							</th>
 						</tr>
 						<tr>
 							<td>Married</td>
-							<th>99</th>
+							<th class="right-align">
+								<span v-if="summary.married">{{summary.married}}</span>
+								<div v-else>
+									<button @click="showInfo('married')"
+									class="btn-small btn-flat waves-effect waves-light">show</button>
+								</div>
+							</th>
 						</tr>
 						<tr>
 							<td>Divorced</td>
-							<th>99</th>
+							<th class="right-align">
+								<span v-if="summary.divorced">{{summary.divorced}}</span>
+								<div v-else>
+									<button @click="showInfo('divorced')"
+									class="btn-small btn-flat waves-effect waves-light">show</button>
+								</div>
+							</th>
 						</tr>
 						<tr>
 							<td>Widowed</td>
-							<th>99</th>
+							<th class="right-align">
+								<span v-if="summary.widowed">{{summary.widowed}}</span>
+								<div v-else>
+									<button @click="showInfo('widowed')"
+									class="btn-small btn-flat waves-effect waves-light">show</button>
+								</div>
+							</th>
 						</tr>
 						<tr>
 							<td>Deceased</td>
-							<th>99</th>
+							<th class="right-align">
+								<span v-if="summary.deceased">{{summary.deceased}}</span>
+								<div v-else>
+									<button @click="showInfo('deceased')"
+									class="btn-small btn-flat waves-effect waves-light">show</button>
+								</div>
+							</th>
 						</tr>
 						<tr>
 							<th>Total</th>
-							<th>99</th>
+							<th class="right-align">
+								<spinner v-if="loading"/>
+								<span v-else>{{summary.total}}</span>
+							</th>
 						</tr>
 					</tbody>
 
@@ -51,7 +96,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col s12 m6 l5 xl4">
+	<div class="col s12 m6 l5 xl4" v-if="account.logged">
 		<div class="card">
 			<div class="card-content">
 				<h5 style="margin: 0px 0px 5px 0px">Account</h5>
