--- a/html/list_view.html
+++ b/html/list_view.html
@@ -1,38 +1,44 @@
 <h5 style="margin: 0 0 10px 0">Person View</h5>
-<div style="margin-bottom: 20px">
-	<p class="grey-text">ID: <b>{{person.id}}</b></p>
-	<!-- <p class="grey-text">Added:  <b>0000-00-00</b></p> -->
+
+<div v-if="loading" style="height: 200px" class="center-xy">
+	<spinner />
 </div>
 
+<div v-else>
+	<div style="margin-bottom: 20px">
+		<p class="grey-text">ID: <b>{{person.id}}</b></p>
+		<!-- <p class="grey-text">Added:  <b>0000-00-00</b></p> -->
+	</div>
 
-<div style="max-width: 400px; margin-bottom: 20px;">
-	<p class="grey-text">First Name</p>
-	<h5 style="margin: 0" class="text-cap">{{person.fname}}</h5>
-	<div class="divider"></div>
-</div>
+	<div style="max-width: 400px; margin-bottom: 20px;">
+		<p class="grey-text">First Name</p>
+		<h5 style="margin: 0" class="text-cap">{{person.fname}}</h5>
+		<div class="divider"></div>
+	</div>
 
-<div style="max-width: 400px; margin-bottom: 20px;">
-	<p class="grey-text">Last Name</p>
-	<h5 style="margin: 0">{{person.lname}}</h5>
-	<div class="divider"></div>
-</div>
+	<div style="max-width: 400px; margin-bottom: 20px;">
+		<p class="grey-text">Last Name</p>
+		<h5 style="margin: 0">{{person.lname}}</h5>
+		<div class="divider"></div>
+	</div>
 
-<div style="max-width: 200px; margin-bottom: 20px;">
-	<p class="grey-text">Birthday</p>
-	<h5 style="margin: 0">{{person.bday}}</h5>
-	<div class="divider"></div>
-</div>
+	<div style="max-width: 200px; margin-bottom: 20px;">
+		<p class="grey-text">Birthday</p>
+		<h5 style="margin: 0">{{person.bday}}</h5>
+		<div class="divider"></div>
+	</div>
 
-<div style="max-width: 200px; margin-bottom: 20px;">
-	<p class="grey-text">Gender</p>
-	<h5 style="margin: 0" class="text-cap">{{person.gender}}</h5>
-	<div class="divider"></div>
-</div>
+	<div style="max-width: 200px; margin-bottom: 20px;">
+		<p class="grey-text">Gender</p>
+		<h5 style="margin: 0" class="text-cap">{{person.gender}}</h5>
+		<div class="divider"></div>
+	</div>
 
-<div style="max-width: 200px; margin-bottom: 20px;">
-	<p class="grey-text">Status</p>
-	<h5 style="margin: 0" class="text-cap">{{person.status}}</h5>
-	<div class="divider"></div>
+	<div style="max-width: 200px; margin-bottom: 20px;">
+		<p class="grey-text">Status</p>
+		<h5 style="margin: 0" class="text-cap">{{person.status}}</h5>
+		<div class="divider"></div>
+	</div>
 </div>
 
 <div class="right-align">
